--- a/dSFMT/speed/Makefile
+++ b/dSFMT/speed/Makefile
@@ -9,10 +9,17 @@ OPT = --param max-inline-insns-single=1800 --param inline-unit-growth=500 \
 --param large-function-growth=900 
 CCFLAGS = -Wall -O9 -Wmissing-prototypes -Winline $(OPT) -DNDEBUG $(DDEBUG) \
 $(DMEXP) $(DPG)
+
 STD_TARGET = sfmtD11_fastc sfmtX78_fastc sfmtX78_msk_fastc \
-	mt_msk_fastc mt19937ar_fastc
+	mt_msk_fastc mt19937ar_fastc mt64_msk_fastc
 ALTI_TARGET = sfmtD11_alti sfmtX78_alti mt_msk_alti
 SSE2_TARGET = sfmtD11_sse2 sfmtX78_sse2 mt_msk_sse2 
+SRC = sfmtD11_fastc.c sfmtD11_alti.c sfmtD11_sse2.c \
+sfmtX78_fastc.c sfmtX78_alti.c sfmtX78_sse2.c \
+mt19937ar.c mt_msk_fastc.c mt19937-64.c mt_msk_alti.c mt_msk_sse2.c \
+test_time.c test_time2.c test_time3.c \
+random.h c99.h mt19937ar.h speed.h paramsD11.h paramsD11-alti.h \
+mt64.h do.sh Makefile
 
 std: ${STD_TARGET}
 
@@ -26,21 +33,18 @@ alti:
 	${MAKE} CCFLAGS="${CCFLAGS} ${OPT_PPC} -DBIG_ENDIAN" ${STD_TARGET} \
 	${ALTI_TARGET}
 
+tar.gz: ${SRC}
+	tar czvf speed.tar.gz ${SRC}
+
 ##### ALTIVEC ####
-sfmtD01_alti: sfmtD01_alti.c test_time.c  paramsD01.h
-	${CC} ${CCFLAGS} -o $@ sfmtD01_alti.c
-
 sfmtD11_alti: sfmtD11_alti.c test_time3.c  paramsD11.h
-	${CC} ${CCFLAGS} -o $@ sfmtD11_alti.c
+	${CC} -faltivec -maltivec ${CCFLAGS} -o $@ sfmtD11_alti.c
 
-sfmtP37_alti: sfmtP37_alti.c test_time.c
-	${CC} ${CCFLAGS} -o $@ sfmtP37_alti.c
+sfmtX78_alti: sfmtX78_alti.c test_time3.c
+	${CC} -faltivec -maltivec ${CCFLAGS} -o $@ sfmtX78_alti.c
 
-sfmtX78_alti: sfmtX78_alti.c test_time.c
-	${CC} ${CCFLAGS} -o $@ sfmtX78_alti.c
-
-mt_msk_alti: mt_msk_alti.c test_time.c
-	${CC} ${CCFLAGS} -o $@ mt_msk_alti.c
+mt_msk_alti: mt_msk_alti.c test_time3.c
+	${CC} -faltivec -maltivec ${CCFLAGS} -o $@ mt_msk_alti.c
 
 ##### SSE2 ####
 sfmtD01_sse2: sfmtD01_sse2.c test_time.c  paramsD01.h
@@ -52,10 +56,10 @@ sfmtD11_sse2: sfmtD11_sse2.c test_time3.c  paramsD11.h
 sfmtP37_sse2: sfmtP37_sse2.c test_time.c
 	${CC} ${CCFLAGS} -o $@ sfmtP37_sse2.c
 
-sfmtX78_sse2: sfmtX78_sse2.c test_time.c
+sfmtX78_sse2: sfmtX78_sse2.c test_time3.c
 	${CC} ${CCFLAGS} -o $@ sfmtX78_sse2.c
 
-mt_msk_sse2: mt_msk_sse2.c test_time.c
+mt_msk_sse2: mt_msk_sse2.c test_time3.c
 	${CC} ${CCFLAGS} -o $@ mt_msk_sse2.c
 
 #### NORMAL C ####
@@ -71,14 +75,17 @@ sfmtP37_fastc: sfmtP37_fastc.c test_time2.c
 sfmtX78_fastc: sfmtX78_fastc.c test_time2.c
 	${CC} ${CCFLAGS} -o $@ sfmtX78_fastc.c
 
-sfmtX78_msk_fastc: sfmtX78_fastc.c test_time.c
+sfmtX78_msk_fastc: sfmtX78_fastc.c test_time3.c
 	${CC} ${CCFLAGS} -DBLOCK -o $@ sfmtX78_fastc.c
 
 mt19937ar_fastc: mt19937ar.c test_time2.c
 	${CC} ${CCFLAGS} -o $@ mt19937ar.c
 
-mt_msk_fastc: mt_msk_fastc.c test_time.c
+mt_msk_fastc: mt_msk_fastc.c test_time3.c
 	${CC} ${CCFLAGS} -DBIG_ENDIAN -o $@ mt_msk_fastc.c
+
+mt64_msk_fastc: mt19937-64.c test_time3.c
+	${CC} ${CCFLAGS} -DBIG_ENDIAN -o $@ mt19937-64.c
 
 .c.o:
 	${CC} ${CCFLAGS} -c $<
