--- a/dSFMT/speed/Makefile
+++ b/dSFMT/speed/Makefile
@@ -56,6 +56,9 @@ sfmtD01_sse2: sfmtD01_sse2.c test_time.c  paramsD01.h
 sfmtD11_sse2: sfmtD11_sse2.c test_time3.c  paramsD11.h
 	${CC} ${CCFLAGS} -o $@ sfmtD11_sse2.c
 
+sfmtDY1_sse2: sfmtDY1_sse2.c test_time3.c  paramsDY1.h
+	${CC} ${CCFLAGS} -o $@ sfmtDY1_sse2.c
+
 sfmtP37_sse2: sfmtP37_sse2.c test_time.c
 	${CC} ${CCFLAGS} -o $@ sfmtP37_sse2.c
 
