--- a/dSFMT/release/Makefile.me
+++ b/dSFMT/release/Makefile.me
@@ -17,6 +17,7 @@ FILES = dSFMT.h \
 	dSFMT-params44497.h \
 	dSFMT-params86243.h \
 	dSFMT-params132049.h \
+	dSFMT-params216091.h \
 	dSFMT.607.out.txt \
 	dSFMT.1279.out.txt \
 	dSFMT.2281.out.txt \
@@ -26,13 +27,14 @@ FILES = dSFMT.h \
 	dSFMT.44497.out.txt \
 	dSFMT.86243.out.txt \
 	dSFMT.132049.out.txt \
+	dSFMT.216091.out.txt \
 	FILES.txt \
 	LICENSE.txt \
 	Makefile \
 	README.txt \
 	CHANGE-LOG.txt \
 	html
-VERSION = 1.1.1
+VERSION = 1.2
 DIR = dSFMT-src-${VERSION}
 
 doc:
