--- a/dSFMT/proto/Makefile
+++ b/dSFMT/proto/Makefile
@@ -237,6 +237,10 @@ searchD11-parity132049: search-parity-vector.o sfmtD11-st.o util.o
 	${CPP} -o $@ search-parity-vector.o sfmtD11-st.o util.o \
 		${LINKOPT}
 
+searchD11-parity216091: search-parity-vector.o sfmtD11-st.o util.o
+	${CPP} -o $@ search-parity-vector.o sfmtD11-st.o util.o \
+		${LINKOPT}
+
 check-affin-bm607: chk-bm.o sfmtD11-afst.o util.o dsfmt-util.o
 	${CPP} -o $@ chk-bm.o sfmtD11-afst.o util.o dsfmt-util.o ${LINKOPT}
 
