--- a/dSFMT/search/Makefile
+++ b/dSFMT/search/Makefile
@@ -14,7 +14,7 @@
 %132049:MEXP=132049
 %216091:MEXP=216091
 
-#DDEBUG = -O0 -g
+DDEBUG = -O0 -g
 
 DMEXP = -DMEXP=${MEXP}
 
@@ -32,12 +32,25 @@ shortest-baseDPf-521: chk-shortestL.o shortbase128.o sfmtDPf-st.o util.o \
 	${CPP} -o $@ chk-shortestL.o shortbase128.o sfmtDPf-st.o util.o \
 			dsfmtL-util.o mt19937blk.o ${LINKOPT}
 
+get-weightDPf-521: get-weightL.o sfmtDPf-st.o util.o \
+			dsfmtL-util.o mt19937blk.o
+	${CPP} -o $@ get-weightL.o sfmtDPf-st.o util.o \
+			dsfmtL-util.o mt19937blk.o ${LINKOPT}
+
+get-weightDPf-1279: get-weightL.o sfmtDPf-st.o util.o \
+			dsfmtL-util.o mt19937blk.o
+	${CPP} -o $@ get-weightL.o sfmtDPf-st.o util.o \
+			dsfmtL-util.o mt19937blk.o ${LINKOPT}
+
 searchDPf-parity521: search-parity-vector.o sfmtD11-st.o util.o
 	${CPP} -o $@ search-parity-vector.o sfmtD11-st.o util.o \
 		${LINKOPT}
 
 testDPf-parity521:test-parity.o dSFMT-ref-st.o util.o dSFMT-ref-st.h
 	 ${CPP} -o $@ test-parity.o dSFMT-ref-st.o util.o ${LINKOPT}
+
+calc-fix-mat: calc-fix-mat.o
+	${CPP} -o $@ calc-fix-mat.o ${LINKOPT}
 
 .cpp.o:
 	${CPP} -c $<
