--- a/dSFMT/proto/Makefile
+++ b/dSFMT/proto/Makefile
@@ -205,6 +205,11 @@ shortest-baseDPg-607: chk-shortestL.o shortbase128.o sfmtDPg-st.o util.o \
 	${CPP} -o $@ chk-shortestL.o shortbase128.o sfmtDPg-st.o util.o \
 			dsfmtL-util.o mt19937blk.o ${LINKOPT}
 
+shortest-baseDN1-607: chk-shortestN.o shortbase128N.o sfmtDN1-st.o util.o \
+			dsfmtN-util.o mt19937blk.o
+	${CPP} -o $@ chk-shortestN.o shortbase128N.o sfmtDN1-st.o util.o \
+			dsfmtN-util.o mt19937blk.o ${LINKOPT}
+
 searchD11-parity607: search-parity-vector.o sfmtD11-st.o util.o
 	${CPP} -o $@ search-parity-vector.o sfmtD11-st.o util.o \
 		${LINKOPT}
