--- a/dSFMT/util/Makefile
+++ b/dSFMT/util/Makefile
@@ -15,7 +15,7 @@
 %132049:MEXP=132049
 %216091:MEXP=216091
 
-#DDEBUG = -O0 -g
+DDEBUG = -O0 -g
 
 DMEXP = -DMEXP=${MEXP}
 
@@ -25,11 +25,14 @@ CPP = g++ -Wall -O9 -I/opt/local/include $(DDEBUG) $(DMEXP) $(DPG)
 
 LINKOPT = -ldsfmt -lntl -lgmp
 
-param-searchDPz2-607: sfmtDPz2.o libdsfmt.a
-	${CPP} -o $@ sfmtDPz2.o ${LINKOPT}
+param-searchDPz2-607: sfmtDPz2.o search.o libdsfmt.a
+	${CPP} -o $@ sfmtDPz2.o search.o ${LINKOPT}
 
-libdsfmt.a: search.o mt19937blk.o util.o dsfmt-util.o 
-	ar -rsv libdsfmt.a search.o mt19937blk.o util.o dsfmt-util.o 
+shortest-baseDPz2-607: sfmtDPz2.o chk-shortest.o libdsfmt.a
+	${CPP} -o $@ sfmtDPz2.o chk-shortest.o ${LINKOPT}
+
+libdsfmt.a: mt19937blk.o util.o dsfmt-util.o shortbase104.o
+	ar -rsv libdsfmt.a mt19937blk.o util.o dsfmt-util.o shortbase104.o 
 
 .cpp.o:
 	${CPP} -c $<
